TEST_PROGRAMS/INVALID/Ossama_Ahmed/errorfive.min
#This program will test nested ifs in a correct order!!!
#This program will test having missing type in a declaration statement  !!



var x: ;
var y: float;  
var z: string;

x=2.000000000000003;
y=((4+3)+5+(7/9)*8);

if (4/5+890+0) then
	y=5;
else
	z=7;
	if z then 
		read z;
	else
		print "Here is the error";
	endif
endif 
